k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-videoanalytics
          image: docker.io/checkpoint5/django:latest
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-storage
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc-postgres-statefulset-0     
  selector:
    matchLabels:
      app: django-app
