k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  serviceName: postgres-service
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres-videoanalytics
          image: postgres:latest
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-pvc
          ports:
            - containerPort: 5432
              name: postgres-cli
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
  selector:
    matchLabels:
      app: postgres-app
      
  volumeClaimTemplates:
    - metadata:
        name: postgres-pvc
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 1000Mi
