k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8000
